--- a/examen-final-gabriela-nava/package.json
+++ b/examen-final-gabriela-nava/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.441.0",
     "next": "^14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -17,6 +18,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.12"
   }
 }
